apps/django_legacy/deployment_griz.yaml
apiVersion: v1
kind: Service
metadata:
  name: griz-service
  namespace: griz
spec:
  selector:
    app: griz
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: griz-deployment
  namespace: griz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: griz
  template:
    metadata:
      labels:
        app: griz
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: pgpass-volume-etc
          secret:
            secretName: pgpass-secret  # Mounted pgpass secret
            defaultMode: 0600
        - name: pgpass-volume-app
          secret:
            secretName: pgpass-secret  # Mounted pgpass secret
            defaultMode: 0600
        - name: nas-volume
          persistentVolumeClaim:
            claimName: pvc-griz

      containers:
        - name: griz
          image: ghcr.io/ditmanson/griz:0.0.17
          command: ["/env/bin/gunicorn"]
          args: ["--bind", ":8000", "--workers", "3", "tdebian.wsgi"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: pgpass-volume-etc
              mountPath: /etc/secrets/.my_pgpass
              subPath: .my_pgpass
              readOnly: true
            - name: pgpass-volume-app
              mountPath: /app/.my_pgpass
              subPath: .my_pgpass
              readOnly: true
            - name: nas-volume
              mountPath: /app/static
