apps/django_legacy/gateway-griz.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: griz-gateway
  namespace: griz
spec:
  selector:
    istio: ingressgateway
  servers:
    ##### Servers ######
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
      - griz.sh
      - tech.griz.sh
      - docs.griz.sh
      - red-rising.griz.sh
      - django.griz.sh
    - port:
        number: 443
        name: httpsgriz
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: griz-credential
      hosts:
        - griz.sh
        - tech.griz.sh
        - docs.griz.sh
        - red-rising.griz.sh
        - django.griz.sh
