apps/django_legacy/vs-griz.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: griz
  namespace: griz
spec:
  hosts:
    - django.griz.sh
  gateways:
    - griz-gateway
  http:
    - route:
        - destination:
            host: griz-service.griz.svc.cluster.local
